--- a/arrasio/config.json
+++ b/arrasio/config.json
@@ -21,19 +21,31 @@
   },
   "verbose": true,
 
-  "WIDTH": 2000,
-  "HEIGHT": 2000,
+  "WIDTH": 3000,
+  "HEIGHT": 3000,
   "MODE": "tdm",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "roid", "norm", "norm", "roid" ],
-    [ "norm", "nest", "roid", "norm" ],
-    [ "norm", "roid", "nest", "norm" ],
-    [ "roid", "norm", "norm", "roid" ]
+    [ "roid", "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm", "norm", "norm","roid" ],
+    [ "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm", "norm", "norm","norm", "norm" ],
+    [ "norm","norm","norm","norm","norm","norm","norm","norm","norm","norm", "norm", "norm","norm", "norm" ],
+    [ "norm","norm","nest","nest","nest","nest","nest","nest","nest","nest", "nest", "nest","norm", "norm" ],
+    [ "norm", "norm","nest","norm","norm","norm","norm","roid","roid","roid","norm", "nest","norm", "norm" ],
+    [ "norm", "norm","nest","norm","norm","roid","roid","roid","roid","norm","norm", "nest","roid", "norm" ],
+    [ "norm", "roid","nest","norm","norm","roid","roid","rock","roid","roid","norm", "nest","norm", "norm" ],
+    [ "norm","norm","nest","norm","norm","roid","roid","norm","norm","norm", "norm", "nest","norm", "norm" ],
+    [ "norm","norm","nest","norm","norm","norm","norm","norm","norm","norm", "norm", "nest","norm", "norm" ],
+    [ "norm", "norm","nest","norm","norm","norm","norm","norm","norm","norm","norm","nest","norm", "norm" ],
+    [ "norm","norm","nest","nest","nest","nest","nest","nest","nest", "nest", "nest","nest", "norm","norm" ],
+    [ "norm","norm","norm","norm","norm","norm","norm","norm", "norm", "norm","norm","norm", "norm","norm" ],
+    [ "norm", "norm","norm","norm","norm","norm","norm","norm","norm", "norm","norm","norm","norm", "norm" ],
+   
+    [ "roid", "norm","norm","norm","norm","norm","norm","norm","norm","norm", "norm","norm", "norm","roid" ]
   ],
-  "X_GRID": 4,
-  "Y_GRID": 4,
+  "X_GRID": 10,
+  "Y_GRID": 10,
+
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
